优化代码评审工具：延长API请求超时至600秒，切换默认模型为Qwen/Qwen3-8，更新配置示例与README说明，调整为使用commit-msg钩子及国内月之暗面API服务

--- a/config_example.ini
+++ b/config_example.ini
@@ -7,7 +7,7 @@ api_key = YOUR_API_KEY_HERE
 api_url = https://api.moonshot.cn/v1/chat/completions
 
 # 模型名称 (默认: gpt-4)
-model = kimi-k2-0711-preview
+model = Qwen/Qwen3-8
 
 # 最大生成令牌数 (默认: 2000)
 max_tokens = 2000
