优化代码评审工具：延长API请求超时至600秒，切换默认模型为Qwen/Qwen3-8，更新配置示例与README说明，调整为使用commit-msg钩子及国内月之暗面API服务

--- a/config_example.ini
+++ b/config_example.ini
@@ -4,7 +4,7 @@
 api_key = YOUR_API_KEY_HERE
 
 # API请求地址 (默认: https://api.openai.com/v1/chat/completions)
-api_url = https://api.moonshot.cn/v1/chat/completions
+api_url = https://api.siliconflow.cn/v1/chat/completions
 
 # 模型名称 (默认: gpt-4)
 model = Qwen/Qwen3-8
